k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-crzgames-website-backend-deployment
  namespace: prod-crzgames-website-backend
  labels:
    app: prod-crzgames-website-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prod-crzgames-website-backend
  template:
    metadata:
      labels:
        app: prod-crzgames-website-backend
    spec:
      containers:
        - name: prod-crzgames-website-backend
          image: corentin35/crzgames-website-backend:${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
