k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-crzgames-website-backend-ingress
  namespace: prod-crzgames-website-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.crzgames.com
      secretName: prod-crzgames-website-backend-tls
  rules:
    - host: api.crzgames.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: prod-crzgames-website-backend-service
                port:
                  number: 3333
